feat: create section elements

--- a/index.html
+++ b/index.html
@@ -37,6 +37,52 @@
         </div>
       </div>
     </section>
+    <section class="elements page__elements">
+      <ul class="elements__list">
+        <li class="elements__item">
+          <img src="./images/san-francisco.jpg" alt="Сан-Франциско" class="elements__image">
+          <article class="elements__item-bottom">
+            <h4 class="elements__item-title">Сан-Франциско</h4>
+            <img src="./images/like.svg" alt="Сердечко для установки лайка" class="elements__like">
+          </article>
+        </li>
+        <li class="elements__item">
+          <img src="./images/san-diego.jpg" alt="Сан-Диего" class="elements__image">
+          <article class="elements__item-bottom">
+            <h4 class="elements__item-title">Сан-Диего</h4>
+            <img src="./images/like.svg" alt="Сердечко для установки лайка" class="elements__like">
+          </article>
+        </li>
+        <li class="elements__item">
+          <img src="./images/apple-park.jpg" alt="Apple" class="elements__image">
+          <article class="elements__item-bottom">
+            <h4 class="elements__item-title">Apple, Cupertino</h4>
+            <img src="./images/like.svg" alt="Сердечко для установки лайка" class="elements__like">
+          </article>
+        </li>
+        <li class="elements__item">
+          <img src="./images/yandex.jpg" alt="Яндекс" class="elements__image">
+          <article class="elements__item-bottom">
+            <h4 class="elements__item-title">Яндекс</h4>
+            <img src="./images/like.svg" alt="Сердечко для установки лайка" class="elements__like">
+          </article>
+        </li>
+        <li class="elements__item">
+          <img src="./images/google.jpg" alt="Гугл" class="elements__image">
+          <article class="elements__item-bottom">
+            <h4 class="elements__item-title">Гугл</h4>
+            <img src="./images/like.svg" alt="Сердечко для установки лайка" class="elements__like">
+          </article>
+        </li>
+        <li class="elements__item">
+          <img src="./images/stanford.jpg" alt="Стэнфордский университет" class="elements__image">
+          <article class="elements__item-bottom">
+            <h4 class="elements__item-title">Стэнфордский университет</h4>
+            <img src="./images/like.svg" alt="Сердечко для установки лайка" class="elements__like">
+          </article>
+        </li>
+      </ul>
+    </section>
   </div>
 
   <script src="./scripts/script.js"></script>
