--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
         </li>
       </ul>
     </section>
+    <footer class="footer page__footer">
+      <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
+    </footer>
   </div>
 
   <script src="./scripts/script.js"></script>
