refactor: improve section elements

--- a/index.html
+++ b/index.html
@@ -40,23 +40,23 @@
     <section class="elements page__elements">
       <ul class="elements__list">
         <li class="elements__item">
-          <img src="./images/san-francisco.jpg" alt="Сан-Франциско" class="elements__image">
+          <img src="./images/moscow.jpeg" alt="Москва" class="elements__image">
           <article class="elements__item-bottom">
-            <h4 class="elements__item-title">Сан-Франциско</h4>
+            <h4 class="elements__item-title">Москва</h4>
             <img src="./images/like.svg" alt="Сердечко для установки лайка" class="elements__like">
           </article>
         </li>
         <li class="elements__item">
-          <img src="./images/san-diego.jpg" alt="Сан-Диего" class="elements__image">
+          <img src="./images/sankt-peterburg.jpeg" alt="Санкт-Петербург" class="elements__image">
           <article class="elements__item-bottom">
-            <h4 class="elements__item-title">Сан-Диего</h4>
+            <h4 class="elements__item-title">Санкт-Петербург</h4>
             <img src="./images/like.svg" alt="Сердечко для установки лайка" class="elements__like">
           </article>
         </li>
         <li class="elements__item">
-          <img src="./images/apple-park.jpg" alt="Apple" class="elements__image">
+          <img src="./images/kazan.jpeg" alt="Казань" class="elements__image">
           <article class="elements__item-bottom">
-            <h4 class="elements__item-title">Apple, Cupertino</h4>
+            <h4 class="elements__item-title">Казань</h4>
             <img src="./images/like.svg" alt="Сердечко для установки лайка" class="elements__like">
           </article>
         </li>
@@ -68,16 +68,16 @@
           </article>
         </li>
         <li class="elements__item">
-          <img src="./images/google.jpg" alt="Гугл" class="elements__image">
+          <img src="./images/ekaterinburg.jpeg" alt="Екатеринбург" class="elements__image">
           <article class="elements__item-bottom">
-            <h4 class="elements__item-title">Гугл</h4>
+            <h4 class="elements__item-title">Екатеринбург</h4>
             <img src="./images/like.svg" alt="Сердечко для установки лайка" class="elements__like">
           </article>
         </li>
         <li class="elements__item">
-          <img src="./images/stanford.jpg" alt="Стэнфордский университет" class="elements__image">
+          <img src="./images/almetyevsk.jpg" alt="Альметьевск" class="elements__image">
           <article class="elements__item-bottom">
-            <h4 class="elements__item-title">Стэнфордский университет</h4>
+            <h4 class="elements__item-title">Альметьевск</h4>
             <img src="./images/like.svg" alt="Сердечко для установки лайка" class="elements__like">
           </article>
         </li>
