--- a/index.html
+++ b/index.html
@@ -12,30 +12,21 @@
   <div class="page">
     <header class="header page__header">
       <a href="#" class="header__logo-link">
-        <img src="./images/logo.png" alt="Логотип" class="header__logo">
+        <img src="./images/logo.svg" alt="Логотип" class="header__logo">
       </a>
     </header>
+
     <section class="profile page__profile">
       <img src="./images/avatar.jpg" alt="Фотография" class="profile__avatar">
       <div class="profile__info">
         <div class="profile__info-top">
           <h2 class="profile__title">Жак-Ив Кусто</h2>
-          <button class="profile__edit-button" title="Редактировать профиль"></button>
+          <button type="button" class="profile__edit-button" title="Редактировать профиль"></button>
         </div>
         <p class="profile__subtitle">Исследователь океана</p>
       </div>
-      <button class="add-button" title="Добавить карточку"></button>
-      <div class="pop-up">
-        <div class="pop-up__container">
-          <form action="/" class="form" method="POST">
-            <h3 class="form__title">Редактировать профиль</h3>
-            <input type="text" class="form__input-name">
-            <input type="text" class="form__input-profession">
-            <input type="submit" class="form__input-button" value="Сохранить">
-          </form>
-          <div class="close-icon"></div>
-        </div>
-      </div>
+      <button type="button" class="profile__add-button" title="Добавить карточку"></button>
+
     </section>
     <section class="elements page__elements">
       <ul class="elements__list">
@@ -43,49 +34,62 @@
           <img src="./images/moscow.jpeg" alt="Москва" class="elements__image">
           <article class="elements__item-bottom">
             <h4 class="elements__item-title">Москва</h4>
-            <img src="./images/like.svg" alt="Сердечко для установки лайка" class="elements__like">
+            <button type="button" class="elements__like"></button>
           </article>
         </li>
         <li class="elements__item">
           <img src="./images/sankt-peterburg.jpeg" alt="Санкт-Петербург" class="elements__image">
           <article class="elements__item-bottom">
             <h4 class="elements__item-title">Санкт-Петербург</h4>
-            <img src="./images/like.svg" alt="Сердечко для установки лайка" class="elements__like">
+            <button type="button" class="elements__like"></button>
           </article>
         </li>
         <li class="elements__item">
           <img src="./images/kazan.jpeg" alt="Казань" class="elements__image">
           <article class="elements__item-bottom">
             <h4 class="elements__item-title">Казань</h4>
-            <img src="./images/like.svg" alt="Сердечко для установки лайка" class="elements__like">
+            <button type="button" class="elements__like"></button>
           </article>
         </li>
         <li class="elements__item">
           <img src="./images/yandex.jpg" alt="Яндекс" class="elements__image">
           <article class="elements__item-bottom">
             <h4 class="elements__item-title">Яндекс</h4>
-            <img src="./images/like.svg" alt="Сердечко для установки лайка" class="elements__like">
+            <button type="button" class="elements__like"></button>
           </article>
         </li>
         <li class="elements__item">
           <img src="./images/ekaterinburg.jpeg" alt="Екатеринбург" class="elements__image">
           <article class="elements__item-bottom">
             <h4 class="elements__item-title">Екатеринбург</h4>
-            <img src="./images/like.svg" alt="Сердечко для установки лайка" class="elements__like">
+            <button type="button" class="elements__like"></button>
           </article>
         </li>
         <li class="elements__item">
           <img src="./images/almetyevsk.jpg" alt="Альметьевск" class="elements__image">
           <article class="elements__item-bottom">
             <h4 class="elements__item-title">Альметьевск</h4>
-            <img src="./images/like.svg" alt="Сердечко для установки лайка" class="elements__like">
+            <button type="button" class="elements__like"></button>
           </article>
         </li>
       </ul>
     </section>
+
     <footer class="footer page__footer">
       <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
     </footer>
+
+    <div class="pop-up">
+      <div class="pop-up__container">
+        <button type="button" class="pop-up__close-icon"></button>
+        <form name="formEditProfile" action="#" class="form" method="POST">
+          <h3 class="form__title">Редактировать профиль</h3>
+          <input name="input-name" type="text" class="form__input" placeholder="Имя Фамилия" required>
+          <input name="input-profession" type="text" class="form__input" placeholder="Профессиональная деятельность" required>
+          <button type="submit" class="form__input-button">Сохранить</button>
+        </form>
+      </div>
+    </div>
   </div>
 
   <script src="./scripts/script.js"></script>
