--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <div class="pop-up">
       <div class="pop-up__container">
         <button type="button" class="pop-up__close-icon"></button>
-        <form name="formEditProfile" action="#" class="form" method="POST">
+        <form name="form-edit-profile" action="#" class="form" method="POST">
           <h3 class="form__title">Редактировать профиль</h3>
           <input name="input-name" type="text" class="form__input" placeholder="Имя Фамилия" required>
           <input name="input-profession" type="text" class="form__input" placeholder="Профессиональная деятельность" required>
