--- a/index.html
+++ b/index.html
@@ -34,42 +34,42 @@
           <img src="./images/moscow.jpeg" alt="Москва" class="elements__image">
           <article class="elements__item-bottom">
             <h4 class="elements__item-title">Москва</h4>
-            <button type="button" class="elements__like"></button>
+            <button type="button" class="elements__like" aria-label="Поставить лайк в виде сердечка"></button>
           </article>
         </li>
         <li class="elements__item">
           <img src="./images/sankt-peterburg.jpeg" alt="Санкт-Петербург" class="elements__image">
           <article class="elements__item-bottom">
             <h4 class="elements__item-title">Санкт-Петербург</h4>
-            <button type="button" class="elements__like"></button>
+            <button type="button" class="elements__like" aria-label="Поставить лайк в виде сердечка"></button>
           </article>
         </li>
         <li class="elements__item">
           <img src="./images/kazan.jpeg" alt="Казань" class="elements__image">
           <article class="elements__item-bottom">
             <h4 class="elements__item-title">Казань</h4>
-            <button type="button" class="elements__like"></button>
+            <button type="button" class="elements__like" aria-label="Поставить лайк в виде сердечка"></button>
           </article>
         </li>
         <li class="elements__item">
           <img src="./images/yandex.jpg" alt="Яндекс" class="elements__image">
           <article class="elements__item-bottom">
             <h4 class="elements__item-title">Яндекс</h4>
-            <button type="button" class="elements__like"></button>
+            <button type="button" class="elements__like" aria-label="Поставить лайк в виде сердечка"></button>
           </article>
         </li>
         <li class="elements__item">
           <img src="./images/ekaterinburg.jpeg" alt="Екатеринбург" class="elements__image">
           <article class="elements__item-bottom">
             <h4 class="elements__item-title">Екатеринбург</h4>
-            <button type="button" class="elements__like"></button>
+            <button type="button" class="elements__like" aria-label="Поставить лайк в виде сердечка"></button>
           </article>
         </li>
         <li class="elements__item">
           <img src="./images/almetyevsk.jpg" alt="Альметьевск" class="elements__image">
           <article class="elements__item-bottom">
             <h4 class="elements__item-title">Альметьевск</h4>
-            <button type="button" class="elements__like"></button>
+            <button type="button" class="elements__like" aria-label="Поставить лайк в виде сердечка"></button>
           </article>
         </li>
       </ul>
@@ -81,11 +81,12 @@
 
     <div class="pop-up">
       <div class="pop-up__container">
-        <button type="button" class="pop-up__close-icon"></button>
+        <button type="button" class="pop-up__close-icon" aria-label="Закрыть форму"></button>
         <form name="form-edit-profile" action="#" class="form" method="POST">
           <h3 class="form__title">Редактировать профиль</h3>
-          <input name="input-name" type="text" class="form__input" placeholder="Имя Фамилия" required>
-          <input name="input-profession" type="text" class="form__input" placeholder="Профессиональная деятельность" required>
+          <input name="input-name" type="text" class="form__input form__input_name" placeholder="Имя Фамилия" required>
+          <input name="input-profession" type="text" class="form__input form__input_profession"
+            placeholder="Профессиональная деятельность" required>
           <button type="submit" class="form__input-button">Сохранить</button>
         </form>
       </div>
