--- a/index.html
+++ b/index.html
@@ -26,53 +26,10 @@
         <p class="profile__subtitle">Исследователь океана</p>
       </div>
       <button type="button" class="profile__add-button" title="Добавить карточку"></button>
-
     </section>
+
     <section class="elements page__elements">
-      <ul class="elements__list">
-        <li class="elements__item">
-          <img src="./images/moscow.jpeg" alt="Москва" class="elements__image">
-          <article class="elements__item-bottom">
-            <h4 class="elements__item-title">Москва</h4>
-            <button type="button" class="elements__like" aria-label="Поставить лайк в виде сердечка"></button>
-          </article>
-        </li>
-        <li class="elements__item">
-          <img src="./images/sankt-peterburg.jpeg" alt="Санкт-Петербург" class="elements__image">
-          <article class="elements__item-bottom">
-            <h4 class="elements__item-title">Санкт-Петербург</h4>
-            <button type="button" class="elements__like" aria-label="Поставить лайк в виде сердечка"></button>
-          </article>
-        </li>
-        <li class="elements__item">
-          <img src="./images/kazan.jpeg" alt="Казань" class="elements__image">
-          <article class="elements__item-bottom">
-            <h4 class="elements__item-title">Казань</h4>
-            <button type="button" class="elements__like" aria-label="Поставить лайк в виде сердечка"></button>
-          </article>
-        </li>
-        <li class="elements__item">
-          <img src="./images/yandex.jpg" alt="Яндекс" class="elements__image">
-          <article class="elements__item-bottom">
-            <h4 class="elements__item-title">Яндекс</h4>
-            <button type="button" class="elements__like" aria-label="Поставить лайк в виде сердечка"></button>
-          </article>
-        </li>
-        <li class="elements__item">
-          <img src="./images/ekaterinburg.jpeg" alt="Екатеринбург" class="elements__image">
-          <article class="elements__item-bottom">
-            <h4 class="elements__item-title">Екатеринбург</h4>
-            <button type="button" class="elements__like" aria-label="Поставить лайк в виде сердечка"></button>
-          </article>
-        </li>
-        <li class="elements__item">
-          <img src="./images/almetyevsk.jpg" alt="Альметьевск" class="elements__image">
-          <article class="elements__item-bottom">
-            <h4 class="elements__item-title">Альметьевск</h4>
-            <button type="button" class="elements__like" aria-label="Поставить лайк в виде сердечка"></button>
-          </article>
-        </li>
-      </ul>
+      <ul class="elements__list"></ul>
     </section>
 
     <footer class="footer page__footer">
@@ -82,16 +39,43 @@
     <div class="pop-up">
       <div class="pop-up__container">
         <button type="button" class="pop-up__close-icon" aria-label="Закрыть форму"></button>
-        <form name="form-edit-profile" action="#" class="form" method="POST">
+        <form name="form-edit-profile" action="#" class="form form_profile" method="POST">
           <h3 class="form__title">Редактировать профиль</h3>
           <input name="input-name" type="text" class="form__input form__input_name" placeholder="Имя Фамилия" required>
           <input name="input-profession" type="text" class="form__input form__input_profession"
             placeholder="Профессиональная деятельность" required>
           <button type="submit" class="form__input-button">Сохранить</button>
         </form>
+        <form name="form-add-card" action="#" class="form form_card" method="POST">
+          <h3 class="form__title">Новое место</h3>
+          <input name="input-name-card" type="text" class="form__input form__input_name-card" placeholder="Название"
+            required>
+          <input name="input-link-card" type="text" class="form__input form__input_link-card"
+            placeholder="Ссылка на картинку" required>
+          <button type="submit" class="form__input-button">Создать</button>
+        </form>
       </div>
     </div>
+
+    <div class="pop-up-image">
+      <figure class="pop-up-image__container">
+        <button type="button" class="pop-up-image__close-icon" aria-label="Закрыть форму"></button>
+        <img class="pop-up-image__img" src="">
+        <figcaption class="pop-up-image__description">Польский костел</figcaption>
+      </figure>
+    </div>
   </div>
+
+  <template id="card">
+    <li class="elements__item">
+      <button type="button" class="elements__remove" aria-label="Удалить карточку"></button>
+      <img alt="Альметьевск" class="elements__image">
+      <article class="elements__item-bottom">
+        <h4 class="elements__item-title"></h4>
+        <button type="button" class="elements__like" aria-label="Поставить лайк в виде сердечка"></button>
+      </article>
+    </li>
+  </template>
 
   <script src="./scripts/script.js"></script>
 </body>
