--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="pop-up-image">
       <figure class="pop-up-image__container">
         <button type="button" class="pop-up-image__close-icon" aria-label="Закрыть форму"></button>
-        <img class="pop-up-image__img" src="">
+        <img alt="Изображение" class="pop-up-image__img" src="">
         <figcaption class="pop-up-image__description">Польский костел</figcaption>
       </figure>
     </div>
@@ -69,7 +69,7 @@
   <template id="card">
     <li class="elements__item">
       <button type="button" class="elements__remove" aria-label="Удалить карточку"></button>
-      <img alt="Альметьевск" class="elements__image">
+      <img alt="Изображение" class="elements__image">
       <article class="elements__item-bottom">
         <h4 class="elements__item-title"></h4>
         <button type="button" class="elements__like" aria-label="Поставить лайк в виде сердечка"></button>
