--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <template id="card">
     <li class="elements__item">
       <button type="button" class="elements__remove" aria-label="Удалить карточку"></button>
-      <img alt="Изображение" class="elements__image">
+      <div class="elements__image" style="background-image: url();"></div>
       <article class="elements__item-bottom">
         <h4 class="elements__item-title"></h4>
         <button type="button" class="elements__like" aria-label="Поставить лайк в виде сердечка"></button>
