--- a/index.html
+++ b/index.html
@@ -39,20 +39,33 @@
     <div class="pop-up">
       <div class="pop-up__container">
         <button type="button" class="pop-up__close-icon" aria-label="Закрыть форму"></button>
-        <form name="form-edit-profile" action="#" class="form form_profile" method="POST">
+        <form novalidate name="form-edit-profile" action="#" class="form form_profile form_non-active" method="POST">
           <h3 class="form__title">Редактировать профиль</h3>
-          <input name="input-name" type="text" class="form__input form__input_name" placeholder="Имя Фамилия" required>
-          <input name="input-profession" type="text" class="form__input form__input_profession"
-            placeholder="Профессиональная деятельность" required>
-          <button type="submit" class="form__input-button">Сохранить</button>
+          <div class="form__input-container">
+            <input name="input-name" type="text" class="form__input form__input_name" placeholder="Имя Фамилия"
+              required minlength="2" maxlength="40" pattern="[A-Za-zА-Яа-яЁё\s\-]+">
+            <span class="form__input-error">Ошибка</span>
+          </div>
+          <div class="form__input-container">
+            <input name="input-profession" type="text" class="form__input form__input_profession"
+              placeholder="Профессиональная деятельность" required minlength="2" maxlength="200">
+            <span class="form__input-error">Ошибка</span>
+          </div>
+          <button type="submit" class="form__input-button" disabled>Сохранить</button>
         </form>
-        <form name="form-add-card" action="#" class="form form_card" method="POST">
+        <form novalidate name="form-add-card" action="#" class="form form_card form_non-active" method="POST">
           <h3 class="form__title">Новое место</h3>
-          <input name="input-name-card" type="text" class="form__input form__input_name-card" placeholder="Название"
-            required>
-          <input name="input-link-card" type="text" class="form__input form__input_link-card"
-            placeholder="Ссылка на картинку" required>
-          <button type="submit" class="form__input-button">Создать</button>
+          <div class="form__input-container">
+            <input name="input-name-card" type="text" class="form__input form__input_name-card" placeholder="Название"
+              required minlength="1" maxlength="30" pattern="[A-Za-zА-Яа-яЁё\s\-]+">
+            <span class="form__input-error">Ошибка</span>
+          </div>
+          <div class="form__input-container">
+            <input name="input-link-card" type="url" class="form__input form__input_link-card"
+              placeholder="Ссылка на картинку" required>
+            <span class="form__input-error">Ошибка</span>
+          </div>
+          <button type="submit" class="form__input-button" disabled>Создать</button>
         </form>
       </div>
     </div>
@@ -77,6 +90,7 @@
     </li>
   </template>
 
+  <script src="./scripts/validate.js"></script>
   <script src="./scripts/script.js"></script>
 </body>
 
