--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
           <div class="form__input-container">
             <input name="input-name" type="text" class="form__input form__input_name" placeholder="Имя Фамилия"
               required minlength="2" maxlength="40" pattern="[A-Za-zА-Яа-яЁё\s\-]+">
-            <span class="form__input-error input-name-error">Ошибка</span>
+            <span id="input-name-error" class="form__input-error">Ошибка</span>
           </div>
           <div class="form__input-container">
             <input name="input-profession" type="text" class="form__input form__input_profession"
               placeholder="Профессиональная деятельность" required minlength="2" maxlength="200">
-            <span class="form__input-error input-profession-error">Ошибка</span>
+            <span id="input-profession-error" class="form__input-error">Ошибка</span>
           </div>
           <button type="submit" class="form__input-button" disabled>Сохранить</button>
         </form>
@@ -58,12 +58,12 @@
           <div class="form__input-container">
             <input name="input-name-card" type="text" class="form__input form__input_name-card" placeholder="Название"
               required minlength="1" maxlength="30" pattern="[A-Za-zА-Яа-яЁё\s\-]+">
-            <span class="form__input-error input-name-card-error">Ошибка</span>
+            <span id="input-name-card-error" class="form__input-error">Ошибка</span>
           </div>
           <div class="form__input-container">
             <input name="input-link-card" type="url" class="form__input form__input_link-card"
               placeholder="Ссылка на картинку" required>
-            <span class="form__input-error input-link-card-error">Ошибка</span>
+            <span id="input-link-card-error" class="form__input-error">Ошибка</span>
           </div>
           <button type="submit" class="form__input-button" disabled>Создать</button>
         </form>
