--- a/index.html
+++ b/index.html
@@ -89,9 +89,7 @@
     </li>
   </template>
 
-  <script src="./scripts/initialCards.js"></script>
-  <script src="./scripts/validate.js"></script>
-  <script src="./scripts/script.js"></script>
+  <script type="module" src="./scripts/index.js"></script>
 </body>
 
 </html>
