--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
       <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
     </footer>
 
-    <div class="pop-up">
-      <form novalidate name="form-edit-profile" action="#" class="form form_profile form_non-active" method="POST">
+    <div class="pop-up pop-up_profile">
+      <form novalidate name="form-edit-profile" action="#" class="form form_profile" method="POST">
         <button type="button" class="pop-up__close-icon" aria-label="Закрыть форму"></button>
         <h3 class="form__title">Редактировать профиль</h3>
         <div class="form__input-container">
@@ -52,7 +52,9 @@
         </div>
         <button type="submit" class="form__input-button" disabled>Сохранить</button>
       </form>
-      <form novalidate name="form-add-card" action="#" class="form form_card form_non-active" method="POST">
+    </div>
+    <div class="pop-up pop-up_card">
+      <form novalidate name="form-add-card" action="#" class="form form_card" method="POST">
         <button type="button" class="pop-up__close-icon" aria-label="Закрыть форму"></button>
         <h3 class="form__title">Новое место</h3>
         <div class="form__input-container">
