refactor: custom webpack

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mesto</title>
-  <link rel="stylesheet" href="./pages/index.css">
+  
 </head>
 
 <body>
@@ -74,7 +74,7 @@
     <div class="pop-up-image">
       <figure class="pop-up-image__container">
         <button type="button" class="pop-up-image__close-icon" aria-label="Закрыть форму"></button>
-        <img alt="Изображение" class="pop-up-image__img" src="">
+        <img alt="Изображение" class="pop-up-image__img">
         <figcaption class="pop-up-image__description">Польский костел</figcaption>
       </figure>
     </div>
@@ -91,7 +91,6 @@
     </li>
   </template>
 
-  <script type="module" src="./scripts/index.js"></script>
 </body>
 
 </html>
