--- a/src/index.html
+++ b/src/index.html
@@ -83,10 +83,10 @@
     </div>
 
     <div class="pop-up pop-up_confirm">
-      <form name="form-confirm" action="#" class="form form-confirm" method="POST">
+      <form name="form-confirm" action="#" class="form form-confirm" method="#">
         <button type="button" class="pop-up__close-icon" aria-label="Закрыть форму"></button>
         <h3 class="form__title">Вы уверены?</h3>
-        <button type="submit" class="form__input-button form__input-button_comfirm">Да</button>
+        <button type="button" class="form__input-button form__input-button_comfirm">Да</button>
       </form>
     </div>
 
