--- a/src/index.html
+++ b/src/index.html
@@ -112,6 +112,7 @@
         <h4 class="elements__item-title"></h4>
         <div class="elements__like-container">
           <button type="button" class="elements__like" aria-label="Поставить лайк в виде сердечка"></button>
+          <div class="elements__like-message">Нравится</div>
           <div class="elements__like-counter">0</div>
         </div>
       </article>
